# simple-artifact-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
examples/streamlit/: Dockerfile  README.md  app.py  main.py  pyproject.toml
src/: auth.rs  logging.rs  main.rs  proxy.rs  subproc.rs
src/template/: error.html
