[package]
name = "simple-fragment-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1" }
bytes = "1.5.0"
clap = { version = "4.5.27", features = ["derive"] }
handlebars = "6.3.1"
http = "1.2.0"
http-body-util = "0.1.2"
nix = { version = "0.29.0", features = ["signal"] }
plane-dynamic-proxy = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
shlex = "1.3.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "process", "fs", "signal"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
